# experiments

./: .gitignore  Cargo.toml  README.md  settings.gradle
lib/: build.gradle
lib/src/jmh/java/experiments/: ModPowBench.java
lib/src/main/java/experiments/: Library.java  ModPow.java  RustBackend.java
lib/src/main/rust/: lib.rs
lib/src/main/rust/utils/: exception.rs
lib/src/test/java/experiments/: LibraryTest.java
